# ArduinoAirSuspensionController

ESP32_SHARED_LIBS/: platformio.ini
ESP32_SHARED_LIBS/src/: user_defines.h
OASMan_ESP32/: .gitignore  OASMan_ESP32.code-workspace  platformio.ini  sdkconfig.esp32-c3-devkitc-02  sdkconfig.esp32-c6-devkitc-1  sdkconfig.esp32-h2-devkitm-1  sdkconfig.upesy_wroom
OASMan_ESP32/src/: CMakeLists.txt  bp32.cpp  main.cpp  pressureMath.cpp  pressureMath.h
OASMan_ESP32/src/components/: screen.cpp  screen.h
OASMan_ESP32/src/tasks/: tasks.cpp  tasks.h
OASMan_ESP32_BP32/: .gitignore  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32dev
OASMan_ESP32_BP32/main/: CMakeLists.txt
